--- a/aiken.toml
+++ b/aiken.toml
@@ -15,4 +15,13 @@ name = "aiken-lang/stdlib"
 version = "v2.1.0"
 source = "github"
 
-[config]
+[[dependencies]]
+name = "aiken-lang/fuzz"
+version = "main"
+source = "github"
+
+[config.default]
+bullet_hash = ""
+one_shot_output_index = 0
+one_shot_tx_hash = ""
+proxy_hash = ""
